--- a/index.html
+++ b/index.html
@@ -23,11 +23,24 @@
                 That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development
                 Hero.</p>
-            <a class="link-button" target="blank" href="https://www.linkedin.com/in/tanjila-akter-ratry-486b6820a/">Hire
+            <a class="link-button" target="_blank"
+                href="https://www.linkedin.com/in/tanjila-akter-ratry-486b6820a/">Hire
                 Me</a>
         </div>
         <div class="half-width">
             <img src="show-off/my-bg.png" alt="">
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="show-off/my-bg2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Want to be a Web Developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics</p>
+            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
         </div>
     </section>
 
